# ton-sbt-cli

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  wallets.txt.example
contracts/: README.md
scripts/: new-wallet.ps1  run.ps1  setup.ps1  test.ps1
src/ton_sbt_tool/: __init__.py  __main__.py  cli.py  config.py  doctor.py  metadata.py  minting.py  output.py  wallets.py
tests/: test_cli_config.py  test_cli_files.py  test_cli_metadata.py  test_integration_manual.py
